# simple_rag

./: README.md  main.py  pyproject.toml
